
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD
  - Don't enable assert() calls when not ./configure'd with --enable-debug.
  - Fixed ./configure test for TCP Wrappers: now it runs on Mac OS X as well.
  - Enhanced configure script: now you can pass an (optional) search path
    to all --with-XXX parameters, e. g. "--with-ident=/opt/ident".
  - Removed typedefs for the native C datatypes.
    Use stdbool.h / inttypes.h if available.
  - New configuration option "OperServerMode" to enable a workaround needed
    when running an network with ircd2 servers and "OperCanUseMode" enabled
    to prevent the ircd2 daemon to drop mode changes of IRC operators.
    Patch by Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Implemented support for "secret channels" (channel mode "s").
  - New configuration option "Mask" for [Operator] sections to limit OPER
    commands to users with a specific IRC mask. Patch from Florian Westphal.
  - Write "error file" (/tmp/ngircd-XXX.err) only if compiled with debug
    code ("--enable-debug") and running as daemon process.
  - Don't create version information string each time a client connects
    but instead on server startup. By Florian Westphal.
  - New configuration variable "PidFile", section "[Global]": if defined,
    the server writes its process ID (PID) to this file. Default: off.
    Idea of Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Code cleanups from Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Raised the maximum length of passwords to 20 characters.
  - Fixed a memory leak when resizing the connection pool and realloc()