@@ -12,6 +12,7 @@
 
 ngIRCd CVSHEAD
 
+  - Implemented the IRC function "WHOWAS".
   - New configuration option "OperServerMode" to enable a workaround needed
     when running an network with ircd2 servers and "OperCanUseMode" enabled
     to prevent the ircd2 daemon to drop mode changes of IRC operators.
@@ -205,4 +206,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: NEWS,v 1.72 2005/04/13 21:40:49 alex Exp $
+$Id: NEWS,v 1.73 2005/05/16 12:25:15 alex Exp $
