@@ -11,6 +11,7 @@
 
 
 ngIRCd CVSHEAD
+  - Implemented the IRC function "WHOWAS".
   - Don't enable assert() calls when not ./configure'd with --enable-debug.
   - Fixed ./configure test for TCP Wrappers: now it runs on Mac OS X as well.
   - Enhanced configure script: now you can pass an (optional) search path
@@ -598,4 +599,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.269 2005/04/13 21:40:49 alex Exp $
+$Id: ChangeLog,v 1.270 2005/05/16 12:25:15 alex Exp $
